# CnC_Remastered_Collection

./: .gitignore  CMakeLists.txt  CnCRemastered.sln  PROGRESS.md
REDALERT/: CMakeLists.txt  DLLInterface.cpp  DLLInterface.h  DLLInterfaceEditor.cpp  MOVIE.H  PATCH.H  REDALERT.INI  RedAlert.vcxproj  STARTUP.CPP
TIBERIANDAWN/: CMakeLists.txt  TiberianDawn.vcxproj
