set(PROJECT_NAME RedAlert)

################################################################################
# Source groups
################################################################################
set(Source_Files
    "2KEYFRAM.CPP"
    "_WSPROTO.H"
    "AADATA.CPP"
    "ABSTRACT.CPP"
    "ABSTRACT.H"
    "ADATA.CPP"
    "ADPCM.CPP"
    "AIRCRAFT.CPP"
    "AIRCRAFT.H"
    "ANIM.CPP"
    "ANIM.H"
    "AUDIO.CPP"
    "AUDIO.H"
    "B64PIPE.CPP"
    "B64PIPE.H"
    "B64STRAW.CPP"
    "B64STRAW.H"
    "BAR.CPP"
    "BAR.H"
    "BASE.CPP"
    "BASE.H"
    "BASE64.CPP"
    "BASE64.H"
    "BBDATA.CPP"
    "BDATA.CPP"
    "BENCH.CPP"
    "BENCH.H"
    "BFIOFILE.CPP"
    "BFIOFILE.H"
    "BIGCHECK.CPP"
    "BIGCHECK.H"
    "BLOWFISH.CPP"
    "BLOWFISH.H"
    "BLOWPIPE.CPP"
    "BLOWPIPE.H"
    "BLWSTRAW.CPP"
    "BLWSTRAW.H"
    "BUFF.CPP"
    "BUFF.H"
    "BUFFERX.H"
    "BUILDING.CPP"
    "BUILDING.H"
    "BULLET.CPP"
    "BULLET.H"
    "CARGO.CPP"
    "CARGO.H"
    "CARRY.CPP"
    "CARRY.H"
    "CBN_.H"
    "CCDDE.CPP"
    "CCDDE.H"
    "CCFILE.CPP"
    "CCFILE.H"
    "CCINI.CPP"
    "CCINI.H"
    "CCMPATH.CPP"
    "CCPTR.CPP"
    "CCPTR.H"
    "CCTEN.CPP"
    "CDATA.CPP"
    "CDFILE.CPP"
    "CDFILE.H"
    "CELL.CPP"
    "CELL.H"
    "CHECKBOX.CPP"
    "CHECKBOX.H"
    "CHEKLIST.CPP"
    "CHEKLIST.H"
    "CLASS.CPP"
    "COLRLIST.CPP"
    "COLRLIST.H"
    "COMBAT.CPP"
    "COMBUF.CPP"
    "COMBUF.H"
    "COMINIT.CPP"
    "COMINIT.H"
    "COMPAT.H"
    "COMQUEUE.CPP"
    "COMQUEUE.H"
    "CONFDLG.CPP"
    "CONFDLG.H"
    "CONNECT.CPP"
    "CONNECT.H"
    "CONNMGR.H"
    "CONQUER.CPP"
    "CONQUER.H"
    "CONST.CPP"
    "CONTROL.CPP"
    "CONTROL.H"
    "COORD.CPP"
    "COORDA.ASM"
    "COORDA.h"
    "CRATE.CPP"
    "CRATE.H"
    "CRC.CPP"
    "CRC.H"
    "CRCPIPE.CPP"
    "CRCPIPE.H"
    "CRCSTRAW.CPP"
    "CRCSTRAW.H"
    "CREDITS.CPP"
    "CREDITS.H"
    "CREW.CPP"
    "CREW.H"
    "CSTRAW.CPP"
    "CSTRAW.H"
    "DDE.CPP"
    "DDE.H"
    "DEBUG.CPP"
    "DEBUG.H"
    "DEFINES.H"
    "DESCDLG.CPP"
    "DESCDLG.H"
    "DIAL8.CPP"
    "DIAL8.H"
    "DIALOG.CPP"
    "DIBAPI.H"
    "DIBFILE.CPP"
    "DIBUTIL.CPP"
    "DIBUTIL.H"
    "DISPLAY.CPP"
    "DISPLAY.H"
    "DLLInterface.cpp"
    "DLLInterface.h"
    "DLLInterfaceEditor.cpp"
    "DLLInterfaceVersion.h"
    "DOOR.CPP"
    "DOOR.H"
    "DPMI.CPP"
    "DPMI.H"
    "DRIVE.CPP"
    "DRIVE.H"
    "DROP.CPP"
    "DROP.H"
    "DTABLE.CPP"
    "DYNAVEC.CPP"
    "EDIT.CPP"
    "EDIT.H"
    "EGOS.CPP"
    "EGOS.H"
    "ENDING.CPP"
    "ENDING.H"
    "EVENT.CPP"
    "EVENT.H"
    "EXPAND.CPP"
    "EXTERNS.H"
    "FACE.CPP"
    "FACE.H"
    "FACING.CPP"
    "FACING.H"
    "FACTORY.CPP"
    "FACTORY.H"
    "FAKESOCK.H"
    "FIELD.CPP"
    "FIELD.H"
    "FILEPCX.H"
    "FINDPATH.CPP"
    "FIXED.CPP"
    "FIXED.H"
    "FLASHER.CPP"
    "FLASHER.H"
    "FLY.CPP"
    "FLY.H"
    "FOOT.CPP"
    "FOOT.H"
    "FTIMER.H"
    "FUNCTION.H"
    "FUSE.CPP"
    "FUSE.H"
    "GADGET.CPP"
    "GADGET.H"
    "GAMEDLG.CPP"
    "GAMEDLG.H"
    "GAUGE.CPP"
    "GAUGE.H"
    "GETCPU.CPP"
    "GLOBALS.CPP"
    "GOPTIONS.CPP"
    "GOPTIONS.H"
    "GSCREEN.CPP"
    "GSCREEN.H"
    "HDATA.CPP"
    "HEAP.CPP"
    "HEAP.H"
    "HELP.CPP"
    "HELP.H"
    "HOUSE.CPP"
    "HOUSE.H"
    "HSV.CPP"
    "HSV.H"
    "ICONLIST.CPP"
    "ICONLIST.H"
    "IDATA.CPP"
    "INFANTRY.CPP"
    "INFANTRY.H"
    "INI.CPP"
    "INI.H"
    "INIBIN.CPP"
    "INICODE.CPP"
    "INIT.CPP"
    "INLINE.H"
    "INT.CPP"
    "INT.H"
    "INTERNET.CPP"
    "INTERNET.H"
    "INTERPAL.CPP"
    "INTRO.CPP"
    "INTRO.H"
    "IOMAP.CPP"
    "IOOBJ.CPP"
    "IPX.CPP"
    "IPX.H"
    "IPX95.CPP"
    "IPX95.H"
    "IPXADDR.CPP"
    "IPXADDR.H"
    "IPXCONN.CPP"
    "IPXCONN.H"
    "IPXGCONN.CPP"
    "IPXGCONN.H"
    "IPXMGR.CPP"
    "IPXMGR.H"
    "ITABLE.CPP"
    "JSHELL.CPP"
    "JSHELL.H"
    "KEY.CPP"
    "KEY.H"
    "LANGUAGE.H"
    "LAYER.CPP"
    "LAYER.H"
    "LCW.CPP"
    "LCW.H"
    "LCWPIPE.CPP"
    "LCWPIPE.H"
    "LCWSTRAW.CPP"
    "LCWSTRAW.H"
    "LCWUNCMP.CPP"
    "LED.H"
    "LINK.CPP"
    "LINK.H"
    "LINT.H"
    "LIST.CPP"
    "LIST.H"
    "LISTNODE.H"
    "LOADDLG.CPP"
    "LOADDLG.H"
    "LOGIC.CPP"
    "LOGIC.H"
    "LZO.H"
    "LZO1X.H"
    "LZO1X_C.CPP"
    "LZO1X_D.CPP"
    "LZO_CONF.H"
    "LZOCONF.H"
    "LZOPIPE.CPP"
    "LZOPIPE.H"
    "LZOSTRAW.CPP"
    "LZOSTRAW.H"
    "LZW.CPP"
    "LZW.H"
    "LZWPIPE.CPP"
    "LZWPIPE.H"
    "LZWSTRAW.CPP"
    "LZWSTRAW.H"
    "MAP.CPP"
    "MAP.H"
    "MAPEDDLG.CPP"
    "MAPEDIT.CPP"
    "MAPEDIT.H"
    "MAPEDPLC.CPP"
    "MAPEDSEL.CPP"
    "MAPEDTM.CPP"
    "MAPSEL.CPP"
    "MCI.CPP"
    "MCI.H"
    "MCIMOVIE.CPP"
    "MCIMOVIE.H"
    "MEMCHECK.H"
    "MENUS.CPP"
    "MESSAGE.H"
    "MiscAsm.cpp"
    "MISSION.CPP"
    "MISSION.H"
    "MIXFILE.CPP"
    "MIXFILE.H"
    "MONOC.CPP"
    "MONOC.H"
    "MOUSE.CPP"
    "MOUSE.H"
    "MOVIE.H"
    "MP.CPP"
    "MP.H"
    "MPGSET.CPP"
    "MPGSET.H"
    "MPLAYER.CPP"
    "MPMGRD.H"
    "MPMGRW.CPP"
    "MPMGRW.H"
    "MPU.CPP"
    "MPU.H"
    "MSGBOX.CPP"
    "MSGBOX.H"
    "MSGLIST.CPP"
    "MSGLIST.H"
    "NETDLG.CPP"
    "NULLCONN.CPP"
    "NULLCONN.H"
    "NULLDLG.CPP"
    "NULLMGR.CPP"
    "NULLMGR.H"
    "OBJECT.CPP"
    "OBJECT.H"
    "OCIDL.H"
    "ODATA.CPP"
    "OPTIONS.CPP"
    "OPTIONS.H"
    "OVERLAY.CPP"
    "OVERLAY.H"
    "PACKET.CPP"
    "PACKET.H"
    "PALETTEC.CPP"
    "PALETTEC.H"
    "PIPE.CPP"
    "PIPE.H"
    "PK.CPP"
    "PK.H"
    "PKPIPE.CPP"
    "PKPIPE.H"
    "PKSTRAW.CPP"
    "PKSTRAW.H"
    "POWER.CPP"
    "POWER.H"
    "PROFILE.CPP"
    "QUEUE.CPP"
    "QUEUE.H"
    "RADAR.CPP"
    "RADAR.H"
    "RADIO.CPP"
    "RADIO.H"
    "RAMFILE.CPP"
    "RAMFILE.H"
    "RAND.CPP"
    "RANDOM.CPP"
    "RANDOM.H"
    "RAWFILE.CPP"
    "RAWFILE.H"
    "RAWOLAPI.CPP"
    "RAWOLAPI.H"
    "READLINE.CPP"
    "READLINE.H"
    "RECT.CPP"
    "RECT.H"
    "REGION.H"
    "REINF.CPP"
    "RGB.CPP"
    "RGB.H"
    "RNDSTRAW.CPP"
    "RNDSTRAW.H"
    "RNG.H"
    "ROTBMP.CPP"
    "ROTBMP.H"
    "RULES.CPP"
    "RULES.H"
    "SAVEDLG.H"
    "SAVELOAD.CPP"
    "SCENARIO.CPP"
    "SCENARIO.H"
    "SCORE.CPP"
    "SCORE.H"
    "SCREEN.H"
    "SCROLL.CPP"
    "SCROLL.H"
    "SDATA.CPP"
    "SEARCH.H"
    "SEDITDLG.CPP"
    "SEDITDLG.H"
    "SENDFILE.CPP"
    "SEQCONN.CPP"
    "SEQCONN.H"
    "SESSION.CPP"
    "SESSION.H"
    "SHA.CPP"
    "SHA.H"
    "Shape.cpp"
    "SHAPEBTN.CPP"
    "SHAPEBTN.H"
    "SHAPIPE.CPP"
    "SHAPIPE.H"
    "SHASTRAW.CPP"
    "SHASTRAW.H"
    "SIDEBAR.CPP"
    "SIDEBAR.H"
    "SIDEBARGlyphx.CPP"
    "SIDEBARGlyphx.H"
    "SLIDER.CPP"
    "SLIDER.H"
    "SMUDGE.CPP"
    "SMUDGE.H"
    "SOUNDDLG.CPP"
    "SOUNDDLG.H"
    "SPECIAL.CPP"
    "SPECIAL.H"
    "SPRITE.CPP"
    "STAGE.H"
    "STARTUP.CPP"
    "STATBTN.CPP"
    "STATBTN.H"
    "STATS.CPP"
    "STRAW.CPP"
    "STRAW.H"
    "STUB.CPP"
    "STYLE.H"
    "SUPER.CPP"
    "SUPER.H"
    "SURFACE.CPP"
    "SURFACE.H"
    "TAB.CPP"
    "TAB.H"
    "TACTION.CPP"
    "TACTION.H"
    "TARGET.CPP"
    "TARGET.H"
    "TCPIP.CPP"
    "TCPIP.H"
    "TDATA.CPP"
    "TEAM.CPP"
    "TEAM.H"
    "TEAMTYPE.CPP"
    "TEAMTYPE.H"
    "TECHNO.CPP"
    "TECHNO.H"
    "TEMPLATE.CPP"
    "TEMPLATE.H"
    "TENMGR.CPP"
    "TENMGR.H"
    "TERRAIN.CPP"
    "TERRAIN.H"
    "TEVENT.CPP"
    "TEVENT.H"
    "TEXTBTN.CPP"
    "TEXTBTN.H"
    "THEME.CPP"
    "THEME.H"
    "TOGGLE.CPP"
    "TOGGLE.H"
    "TOOLTIP.CPP"
    "TOOLTIP.H"
    "TRACKER.CPP"
    "TRIGGER.CPP"
    "TRIGGER.H"
    "TRIGTYPE.CPP"
    "TRIGTYPE.H"
    "TXTLABEL.CPP"
    "TXTLABEL.H"
    "TYPE.H"
    "UDATA.CPP"
    "UDPADDR.CPP"
    "UNIT.CPP"
    "UNIT.H"
    "UTRACKER.CPP"
    "UTRACKER.H"
    "VDATA.CPP"
    "VECTOR.CPP"
    "VECTOR.H"
    "VERSION.CPP"
    "VERSION.H"
    "VESSEL.CPP"
    "VESSEL.H"
    "VISUDLG.CPP"
    "VISUDLG.H"
    "VORTEX.CPP"
    "VORTEX.H"
    "W95TRACE.CPP"
    "W95TRACE.H"
    "WARHEAD.CPP"
    "WARHEAD.H"
    "WATCOM.H"
    "WEAPON.CPP"
    "WEAPON.H"
    "WINSTUB.CPP"
    "WOL_CGAM.CPP"
    "WOL_CHAT.CPP"
    "WOL_DNLD.CPP"
    "WOL_GSUP.CPP"
    "WOL_GSUP.H"
    "WOL_LOGN.CPP"
    "WOL_MAIN.CPP"
    "WOL_OPT.CPP"
    "WOLAPIOB.CPP"
    "WOLAPIOB.H"
    "WOLDEBUG.H"
    "WOLEDIT.CPP"
    "WOLEDIT.H"
    "WOLSTRNG.CPP"
    "WOLSTRNG.H"
    "WSNWLINK.H"
    "WSPIPX.CPP"
    "WSPIPX.H"
    "WSPROTO.CPP"
    "WSPROTO.H"
    "WSPUDP.CPP"
    "WSPUDP.H"
    "WWALLOC.H"
    "WWFILE.H"
    "XPIPE.CPP"
    "XPIPE.H"
    "XSTRAW.CPP"
    "XSTRAW.H"
)
source_group("Source Files" FILES ${Source_Files})

set(Source_Files__Resource
    "RESOURCE/resource.h"
)
source_group("Source Files\\Resource" FILES ${Source_Files__Resource})

set(Source_Files__win32lib
    "WIN32LIB/_DIPTABL.CPP"
    "WIN32LIB/ALLOC.CPP"
    "WIN32LIB/AUDIO.H"
    "WIN32LIB/BUFFER.CPP"
    "WIN32LIB/BUFFER.H"
    "WIN32LIB/BUFFGLBL.CPP"
    "WIN32LIB/DDRAW.CPP"
    "WIN32LIB/DDRAW.H"
    "WIN32LIB/DEFINES.H"
    "WIN32LIB/DELAY.CPP"
    "WIN32LIB/DESCMGMT.H"
    "WIN32LIB/DIFFTB.INC"
    "WIN32LIB/DIPTHONG.CPP"
    "WIN32LIB/DIPTHONG.H"
    "WIN32LIB/DPLAY.H"
    "WIN32LIB/DRAWBUFF.H"
    "WIN32LIB/DRAWBUFF.INC"
    "WIN32LIB/DrawMisc.cpp"
    "WIN32LIB/DRAWRECT.CPP"
    "WIN32LIB/DSETUP.H"
    "WIN32LIB/DSOUND.H"
    "WIN32LIB/EXTERNS.H"
    "WIN32LIB/FASTFILE.H"
    "WIN32LIB/FILE.H"
    "WIN32LIB/FILEPCX.H"
    "WIN32LIB/FILETEMP.H"
    "WIN32LIB/FONT.CPP"
    "WIN32LIB/FONT.H"
    "WIN32LIB/FUNCTION.H"
    "WIN32LIB/GBUFFER.CPP"
    "WIN32LIB/GBUFFER.H"
    "WIN32LIB/GBUFFER.INC"
    "WIN32LIB/GETSHAPE.CPP"
    "WIN32LIB/ICONCACH.H"
    "WIN32LIB/ICONSET.CPP"
    "WIN32LIB/IFF.CPP"
    "WIN32LIB/IFF.H"
    "WIN32LIB/INDEXTB.INC"
    "WIN32LIB/IRANDOM.CPP"
    "WIN32LIB/KEYBOARD.H"
    "WIN32LIB/KEYBOARD.INC"
    "WIN32LIB/KEYSTRUC.INC"
    "WIN32LIB/LOAD.CPP"
    "WIN32LIB/LOADFONT.CPP"
    "WIN32LIB/MCGAPRIM.INC"
    "WIN32LIB/MEMFLAG.H"
    "WIN32LIB/MISC.H"
    "WIN32LIB/MODEMREG.H"
    "WIN32LIB/MONO.H"
    "WIN32LIB/MOUSE.H"
    "WIN32LIB/MOUSE.INC"
    "WIN32LIB/MOUSEWW.CPP"
    "WIN32LIB/NYBBTB.INC"
    "WIN32LIB/PALETTE.CPP"
    "WIN32LIB/PALETTE.H"
    "WIN32LIB/PLAYCD.H"
    "WIN32LIB/PROFILE.H"
    "WIN32LIB/PROFILE.INC"
    "WIN32LIB/RAWFILE.H"
    "WIN32LIB/SET_FONT.CPP"
    "WIN32LIB/SHAPE.H"
    "WIN32LIB/SHAPE.INC"
    "WIN32LIB/SOS.H"
    "WIN32LIB/SOSCOMP.H"
    "WIN32LIB/SOSDATA.H"
    "WIN32LIB/SOSDEFS.H"
    "WIN32LIB/SOSFNCT.H"
    "WIN32LIB/SOSRES.H"
    "WIN32LIB/SOUND.H"
    "WIN32LIB/SOUNDINT.H"
    "WIN32LIB/STAMP.INC"
    "WIN32LIB/STRUCTS.H"
    "WIN32LIB/SVGAPRIM.INC"
    "WIN32LIB/TILE.H"
    "WIN32LIB/TIMER.CPP"
    "WIN32LIB/TIMER.H"
    "WIN32LIB/TIMERDWN.CPP"
    "WIN32LIB/TIMERINI.CPP"
    "WIN32LIB/VIDEO.H"
    "WIN32LIB/WINCOMM.H"
    "WIN32LIB/WINDOWS.CPP"
    "WIN32LIB/WINHIDE.CPP"
    "WIN32LIB/WRITEPCX.CPP"
    "WIN32LIB/WSA.H"
    "WIN32LIB/WW_WIN.H"
    "WIN32LIB/WWFILE.H"
    "WIN32LIB/WWLIB32.H"
    "WIN32LIB/WWMEM.H"
    "WIN32LIB/WWMEM.INC"
    "WIN32LIB/wwstd.h"
)
source_group("Source Files\\win32lib" FILES ${Source_Files__win32lib})

set(ALL_FILES
    ${Source_Files}
    ${Source_Files__Resource}
    ${Source_Files__win32lib}
)

################################################################################
# Target
################################################################################
add_library(${PROJECT_NAME} SHARED ${ALL_FILES})

use_props(${PROJECT_NAME} "${CMAKE_CONFIGURATION_TYPES}" "${DEFAULT_CXX_PROPS}")
################################################################################
# Includes for CMake from *.props
################################################################################
use_props(${PROJECT_NAME} "${CMAKE_CONFIGURATION_TYPES}" "$ENV{VCTargetsPath}/BuildCustomizations/masm.cmake")

set(ROOT_NAMESPACE RedAlert)

################################################################################
# Output directory
################################################################################
set_target_properties(${PROJECT_NAME} PROPERTIES
    OUTPUT_DIRECTORY_RELEASE "${CMAKE_CURRENT_SOURCE_DIR}/../bin/${CMAKE_VS_PLATFORM_NAME}/"
)
set_target_properties(${PROJECT_NAME} PROPERTIES
    INTERPROCEDURAL_OPTIMIZATION         "TRUE"
)
################################################################################
# MSVC runtime library
################################################################################
get_property(MSVC_RUNTIME_LIBRARY_DEFAULT TARGET ${PROJECT_NAME} PROPERTY MSVC_RUNTIME_LIBRARY)
string(CONCAT "MSVC_RUNTIME_LIBRARY_STR"
    MultiThreaded
)
set_target_properties(${PROJECT_NAME} PROPERTIES MSVC_RUNTIME_LIBRARY ${MSVC_RUNTIME_LIBRARY_STR})

################################################################################
# Include directories
################################################################################
target_include_directories(${PROJECT_NAME} PUBLIC
    "${CMAKE_CURRENT_SOURCE_DIR}/WIN32LIB"
)

################################################################################
# Compile definitions
################################################################################
target_compile_definitions(${PROJECT_NAME} PRIVATE
    "TRUE_FALSE_DEFINED;"
    "ENGLISH;"
    "WIN32;"
    "NDEBUG;"
    "_WINDOWS;"
    "_USRDLL;"
    "REDALERT_EXPORTS;"
    "_MBCS"
)

################################################################################
# Compile and link options
################################################################################
if(MSVC)
    target_compile_options(${PROJECT_NAME} PRIVATE
        /MP;
        /GL-;
        /O2;
        /Oi;
        /Gy;
        /W3;
        /WX;
        ${DEFAULT_CXX_DEBUG_INFORMATION_FORMAT};
        /Zp1;
        /wd4800;
        /wd4244;
        /wd4996;
        /GS-
    )
    target_link_options(${PROJECT_NAME} PRIVATE
        /DEBUG:FULL;
        /SAFESEH:NO;
        /SUBSYSTEM:WINDOWS;
        /OPT:REF;
        /OPT:ICF;
        /NXCOMPAT:NO;
        /DYNAMICBASE:NO;
        /INCREMENTAL:NO
    )
endif()

################################################################################
# Dependencies
################################################################################
set(ADDITIONAL_LIBRARY_DEPENDENCIES
    "winmm;"
    "Ws2_32"
)
target_link_libraries(${PROJECT_NAME} PUBLIC "${ADDITIONAL_LIBRARY_DEPENDENCIES}")

